# mac-health-monitor-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  build-app.sh
.github/workflows/: ci.yml
public/: app.js  index.html  styles.css
src/: main.rs
