[package]
name = "mac-health-monitor-rust"
version = "0.1.0"
edition = "2024"
description = "A lightweight native macOS health dashboard for CPU, memory, disk, battery, process, Rosetta, and local LLM usage signals."
authors = ["Alexandre Zeller"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/EauZz/mac-health-monitor-rust"
keywords = ["macos", "monitoring", "apple-silicon", "rust", "wry"]
categories = ["os::macos-apis", "gui"]

[dependencies]
serde_json = "1.0.149"
tao = "0.35.0"
wry = "0.55.0"
